log
Thu Apr  7 15:54:06 UTC 2022: 
 tests:  0|6
total_score: 0/70
8d18cab
Thu Apr  7 16:08:40 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4656f9f
Thu Apr  7 16:09:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:14: error: unused variable ‘M’ [-Werror=unused-variable]
     HashMap *M=(HashMap*)malloc(sizeof(HashMap));
              ^
cc1: all warnings being treated as errors
Compilation failed
6ecafaa
Thu Apr  7 16:14:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ee7c4ef
Thu Apr  7 16:33:46 UTC 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:14: error: ‘REMAIMER’ undeclared (first use in this function)
     m->size= REMAIMER;
              ^~~~~~~~
hashmap.c:56:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:31: error: ‘SIZE’ undeclared (first use in this function); did you mean ‘FILE’?
     m->buckets=(Pair**)malloc(SIZE*sizeof(Pair*));
                               ^~~~
                               FILE
Compilation failed
69cfe4c
Thu Apr  7 16:34:33 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:14: error: ‘REMAINDER’ undeclared (first use in this function)
     m->size= REMAINDER;
              ^~~~~~~~~
hashmap.c:56:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:31: error: expected expression before ‘FILE’
     m->buckets=(Pair**)malloc(FILE*sizeof(Pair*));
                               ^~~~
Compilation failed
6955544
Thu Apr  7 16:35:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:31: error: expected expression before ‘FILE’
     m->buckets=(Pair**)malloc(FILE*sizeof(Pair*));
                               ^~~~
Compilation failed
de6bf66
Thu Apr  7 16:35:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:31: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
     m->buckets=(Pair**)malloc(size*sizeof(Pair*));
                               ^~~~
                               sinl
hashmap.c:58:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cdf8e27
Thu Apr  7 16:35:40 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
6ae9b25
Thu Apr  7 16:39:08 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
741e5d1
Fri Apr  8 01:02:05 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
99242b1
